--- a/IMDB.Web/Areas/Admin/Views/Movie/Details.cshtml
+++ b/IMDB.Web/Areas/Admin/Views/Movie/Details.cshtml
@@ -32,7 +32,7 @@
                 <ul>
                     @foreach (var item in Model.Member)
                     {
-                        <li>@item.FirstName + @item.LastName</li>
+                        <li>@item.FirstName @item.LastName</li>
                     }
                 </ul>
             }
