--- a/IMDB.Web/Views/Auth/Login.cshtml
+++ b/IMDB.Web/Views/Auth/Login.cshtml
@@ -22,39 +22,47 @@
                         <img src="https://images-na.ssl-images-amazon.com/images/G/01/imdb/authportal/images/www_imdb_logo._CB443130112_.png" alt="IMDb.com logo"><hr />
                     </div>
                 </div>
-                <div class="d-flex justify-content-center form_container">
-                    <form asp-action="Login" method="post">
-                        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                        <div class="input-group mb-3">
-                            <div class="input-group-append">
-                                <span class="input-group-text"><i class="fas fa-user"></i></span>
-                            </div>
-                            <input type="email" asp-for="Email" class="form-control input_user" value="" placeholder="E mail">
-                        </div>
-                        <div class="input-group mb-2">
-                            <div class="input-group-append">
-                                <span class="input-group-text"><i class="fas fa-key"></i></span>
-                            </div>
-                            <input type="password" asp-for="Password" class="form-control input_pass" placeholder="password">
-                        </div>
-                        <div class="form-group">
-                            <div class="custom-control custom-checkbox">
-                                <input type="checkbox" class="custom-control-input" id="customControlInline">
-                                <label class="custom-control-label" for="customControlInline">Remember me</label>
-                            </div>
-                        </div>
-                        <div class="d-flex justify-content-center mt-3 login_container">
-                            <button type="button" name="button" class="btn login_btn">Login</button>
-                        </div>
-                    </form>
-                </div>
+                <div class="container">
+                    <div class="d-flex justify-content-center h-100">
+                        <div class="card">
+                            <div class="card-header bg-black">
+                                <h3>Sign In</h3>
 
-                <div class="mt-4">
-                    <div class="d-flex justify-content-center links">
-                        Don't have an account? <a asp-action="Register" class="ml-2">Sign Up</a>
-                    </div>
-                    <div class="d-flex justify-content-center links">
-                        <a href="#">Forgot your password?</a>
+                            </div>
+                            <div class="card-body bg-black">
+                                <form asp-action="Login" method="post">
+                                    <div asp-validation-summary="All" class="text-danger"></div>
+                                    <div class="input-group form-group">
+                                        <div class="input-group-prepend">
+                                            <span class="input-group-text"><i class="fas fa-user"></i></span>
+                                        </div>
+                                        <input type="email" class="form-control" asp-for="Email" placeholder="Email">
+
+                                    </div>
+                                    <div class="input-group form-group">
+                                        <div class="input-group-prepend">
+                                            <span class="input-group-text"><i class="fas fa-key"></i></span>
+                                        </div>
+                                        <input type="password" class="form-control" asp-for="Password" placeholder="password">
+                                    </div>
+                                    <div class="row align-items-center remember">
+                                        <input type="checkbox">Remember Me
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="submit" value="Login" class="btn-sm float-left btn-primary login_btn">
+                                    </div><br />
+                                   
+                                </form>
+                            </div>
+                            <div class="card-footer bg-black">
+                                <div class="d-flex justify-content-center links">
+                                    Don't have an account?<a asp-action="Register">Sign Up</a>
+                                </div>
+                                <div class="d-flex justify-content-center">
+                                    <a href="#">Forgot your password?</a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
